syntax = "proto3";

package org.hypertrace.span.processing.config.service.v1;

option java_multiple_files = true;

import "org/hypertrace/span/processing/config/service/v1/span_filter.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message SamplingConfig {
  string id = 1;
  SamplingConfigInfo sampling_config_info = 2;
}

message SamplingConfigInfo {
  RateLimitConfig rate_limit_config = 1;
  SpanFilter filter = 2;
}

message SamplingConfigDetails {
  SamplingConfig sampling_config = 1;
  SamplingConfigMetadata metadata = 2;
}

message SamplingConfigMetadata {
  google.protobuf.Timestamp creation_timestamp = 1;
  google.protobuf.Timestamp last_updated_timestamp = 2;
}

message RateLimitConfig {
  RateLimit trace_limit_per_endpoint = 1;
  RateLimit trace_limit_global = 2;
  google.protobuf.Duration api_endpoint_cache_duration = 3;
}

message RateLimit {
  oneof limit {
    WindowedRateLimit fixed_window_limit = 1;
  }
}

message WindowedRateLimit {
  int64 quantity_allowed = 1;
  google.protobuf.Duration window_duration = 2;
}
